<resources>
    <string name="app_name">LearnEnglishWordsApp</string>
    <string name="button_skip">Skip</string>
    <string name="title_correct">Correct!</string>
    <string name="title_wrong">Wrong!</string>
    <string name="button_continue">Continue</string>
    <string name="title_question">Do you want to exit?</string>
    <string name="button_restart">Restart</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="wrong_answers">Wrong answers:</string>
    <string name="missed_answers">Missed answers:</string>
    <string name="start_programming">Programming</string>
    <string name="start_trips">Trevel</string>
    <string name="start_title">Learn English words</string>
    <string name="result_sport">Sport</string>
    <string name="result_programming">Programming</string>
    <string name="result_school">School</string>
    <string name="result_travel">Travel</string>
    <string name="button_back">back image</string>
    <string name="image_category">category image</string>
    <string name="null_score">0</string>
    <string name="button_close">image exit</string>
    <string name="variant_text" translatable="false">вариант текста</string>
    <string name="title_result">Your result:</string>
    <string name="work_timer">Timer:</string>
</resources>