<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/travel"
        android:scaleType="centerCrop">

    </ImageView>

    <TextView
        android:id="@+id/tvChoiceResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/title_result"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/clBlockResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBlockResult"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/shape_rounded_result_table"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/correct_answers"
            android:textColor="@color/correctVariantValue"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/tvCorrectAnswerResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/correctVariantValue"
            android:text="0"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/wrongVariantValue"
            android:text="@string/wrong_answers"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswerResult">

        </TextView>

        <TextView
            android:id="@+id/tvWrongAnswerResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/wrongVariantValue"
            android:text="0"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/missed_answers"
            android:textColor="@color/buttonBlueColor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWrongAnswerResult">

        </TextView>

        <TextView
            android:id="@+id/tvMisseAnswerResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_regular"
            android:text="0"
            android:textColor="@color/buttonBlueColor"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

        </TextView>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/btnReload"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/rubik_regular"
        android:background="@drawable/shape_rounded_buttom"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/button_restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </android.widget.Button>

    <ImageButton
        android:id="@+id/btnCloseResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_close"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        app:lottie_fileName="fire_works.json"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.airbnb.lottie.LottieAnimationView>
</androidx.constraintlayout.widget.ConstraintLayout>